force-app/main/default/objects/ContentVersion/fields/File_Category__c.field-meta.xml
<CustomField>
    <fullName>File_Category__c</fullName>
    <description>File category to group the files uploaded. This is also used by automation to set the file access.</description>
    <inlineHelpText>File category to group the files uploaded.</inlineHelpText>
    <label>File Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Letter of Acceptance</fullName>
            </value>
            <value>
                <fullName>Personal Identity</fullName>
            </value>
            <value>
                <fullName>Profile Picture</fullName>
            </value>
            <value>
                <fullName>Referral Letter</fullName>
            </value>
            <value>
                <fullName>Transcript</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>