force-app/main/default/objects/ContentVersion/fields/Generate_Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Generate_Public_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically generates the public URL</description>
    <inlineHelpText>Automatically generates the public URL</inlineHelpText>
    <label>Generate Public URL</label>
    <type>Checkbox</type>
</CustomField>