force-app/main/default/objects/ContentVersion/fields/Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_URL__c</fullName>
    <description>For storing the publicly accessible URL</description>
    <inlineHelpText>For storing the publicly accessible URL</inlineHelpText>
    <label>Public URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>